Source/JavaScriptCore/bytecode/ExitKind.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include <wtf/Forward.h>
+
 namespace JSC {
 
 enum ExitKind : uint8_t {
