Source/JavaScriptCore/heap/RootMarkReason.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include <wtf/Forward.h>
+
 namespace JSC {
 
 #define FOR_EACH_ROOT_MARK_REASON(v) \
